<resources>
    <string name="app_name">Coupler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_group">New group</string>
    <string name="menu_contact">New contact</string>
    <string name="menu_contact_list">Contacts</string>
    <string name="menu_my_places">My places</string>
    <string name="menu_offline_maps">Offline maps</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_info">Info</string>
    <string name="menu_chat_list">Chat List</string>
    <string name="menu_map">Map</string>
    <string name="menu_personal_chat_item">Add personal chat</string>
    <string name="menu_group_chat_item">Add group chat</string>
    <string name="menu_my_message_item">Add my message</string>
    <string name="menu_talker_message_item">Add talker message</string>
    <string name="menu_edit_contact">Edit</string>
    <string name="menu_delete_contact">Delete</string>
    <string name="menu_clear_message_history">Clear history</string>
    <string name="menu_delete_chat">Delete chat</string>
    <string name="menu_delete_leave_group">Delete and leave group</string>

    <string name="gid">234-325-456-243</string>
    <string name="notification_status_on">On</string>
    <string name="notification_status_off">Off</string>

    <string name="description_label">Description</string>

    <string name="new_group_label">New Group</string>
    <string name="new_contact_label">New Contact</string>
    <string name="contact_list_header">Sorted by last seen time</string>

    <string name="add_group_members">Add Members</string>
    <string name="add_group_member_bold">ADD MEMBER</string>
    <string name="member_count_pattern">%d members</string>
    <string name="one_member">1 member</string>

    <string name="hint_first_name">First Name (required)</string>
    <string name="hint_last_name">Last Name (optional)</string>

    <string name="hint_group_name">Enter group name</string>
    <string name="hint_group_description">Description (optional)</string>

    <string name="gid_label">GID</string>
    <string name="gid_pattern">___ ___ ___ ___</string>

    <string name="dialog_edit_list">Edit list</string>
    <string name="dialog_create_list">New list</string>
    <string name="dialog_add_place_to_list">Add place to list</string>
    <string name="dialog_place">Place</string>
    <string name="dialog_edit_place">Edit place</string>

    <string name="downloaded_offline_region">Downloaded</string>
    <string name="search_region">Search region</string>

</resources>
