<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_group_24dp"
            android:title="@string/menu_group" />
        <item
            android:id="@+id/nav_add_contact"
            android:icon="@drawable/ic_contact_24dp"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_contact_list"
            android:icon="@drawable/ic_contact_24dp"
            android:title="@string/menu_contact_list" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_24dp"
            android:title="@string/menu_info" />
    </group>
</menu>
